Before assumption of homogeneity